Google-style 코드 컨벤션 적용